endpoint agregar y eliminar camion-redis
